--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -2,5 +2,5 @@
   <%= f.input :comment %>
   <%= f.association :movie %>
   <%= f.association :list %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: "btn btn-default btn-danger" %>
 <% end %>
