--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -19,3 +19,10 @@
     <% end %>
     </div>
 </div>
+
+<%= cl_image_tag("biyg3pmsgtyjfax9spds",
+      width: 400, height: 300, crop: :fill) %>
+
+<!-- for face detection -->
+<%= cl_image_tag("bj3vgwfz91h4efmx48t6",
+      width: 150, height: 150, crop: :thumb, gravity: :face) %>
